feat: completed some of the assignment

--- a/home_assignment01.ipynb
+++ b/home_assignment01.ipynb
@@ -17,19 +17,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "first_name = ''\n",
-    "last_name = ''"
+    "first_name = 'Mathias'\n",
+    "last_name = 'Bigler'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['/home/ml32020/mathias_bigler/module_3', '/home/ml32020/mathias_bigler/miniconda3/envs/py3_study/lib/python38.zip', '/home/ml32020/mathias_bigler/miniconda3/envs/py3_study/lib/python3.8', '/home/ml32020/mathias_bigler/miniconda3/envs/py3_study/lib/python3.8/lib-dynload', '', '/home/ml32020/mathias_bigler/miniconda3/envs/py3_study/lib/python3.8/site-packages', '/home/ml32020/mathias_bigler/miniconda3/envs/py3_study/lib/python3.8/site-packages/IPython/extensions', '/home/ml32020/mathias_bigler/.ipython']\n",
+      "3.8.12 (default, Oct 12 2021, 13:49:34) \n",
+      "[GCC 7.5.0]\n"
+     ]
+    }
+   ],
    "source": [
     "import sys\n",
     "print(sys.path)\n",
@@ -46,20 +56,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The Zen of Python, by Tim Peters\n",
+      "\n",
+      "Beautiful is better than ugly.\n",
+      "Explicit is better than implicit.\n",
+      "Simple is better than complex.\n",
+      "Complex is better than complicated.\n",
+      "Flat is better than nested.\n",
+      "Sparse is better than dense.\n",
+      "Readability counts.\n",
+      "Special cases aren't special enough to break the rules.\n",
+      "Although practicality beats purity.\n",
+      "Errors should never pass silently.\n",
+      "Unless explicitly silenced.\n",
+      "In the face of ambiguity, refuse the temptation to guess.\n",
+      "There should be one-- and preferably only one --obvious way to do it.\n",
+      "Although that way may not be obvious at first unless you're Dutch.\n",
+      "Now is better than never.\n",
+      "Although never is often better than *right* now.\n",
+      "If the implementation is hard to explain, it's a bad idea.\n",
+      "If the implementation is easy to explain, it may be a good idea.\n",
+      "Namespaces are one honking great idea -- let's do more of those!\n"
+     ]
+    }
+   ],
    "source": [
-    "# YOUR CODE HERE"
+    "import this"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "student_has_read_zen_of_python = # True or False\n",
+    "student_has_read_zen_of_python = True # True or False\n",
     "assert student_has_read_zen_of_python"
    ]
   },
@@ -76,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +126,7 @@
     "    object,\n",
     "    str,\n",
     "    str(2.),\n",
-    "    float('2.0')\n",
+    "    float('2.0'),\n",
     "    'hello',\n",
     "    this,\n",
     "    dict,\n",
@@ -101,20 +139,45 @@
     "    int,\n",
     "    float,\n",
     "    object,\n",
-    "    module,\n",
+    "#     module,\n",
     "    str,\n",
-    "    dict\n",
+    "    dict,\n",
     "    list\n",
     "]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'int'> all good\n",
+      "2 all good\n",
+      "2.0 all good\n",
+      "None all good\n",
+      "<class 'object'> all good\n",
+      "<class 'str'> all good\n",
+      "2.0 all good\n",
+      "2.0 all good\n",
+      "hello all good\n",
+      "<module 'this' from '/home/ml32020/mathias_bigler/miniconda3/envs/py3_study/lib/python3.8/this.py'> all good\n",
+      "<class 'dict'> all good\n",
+      "<class 'list'> all good\n",
+      "[<class 'dict'>] all good\n",
+      "{1: []} all good\n"
+     ]
+    }
+   ],
    "source": [
-    "# YOUR CODE HERE"
+    "for object in list_of_objects:\n",
+    "    if not isinstance(object, tuple(list_of_types)):\n",
+    "        print(object, \"does not belong to any of the proposed types..\")\n",
+    "    else:\n",
+    "        print(object, \"all good\")"
    ]
   },
   {
@@ -128,11 +191,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# YOUR CODE HERE"
+    "a = 89 / 11\n",
+    "b = 89 & 11"
    ]
   },
   {
@@ -153,11 +217,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ZeroDivisionError",
+     "evalue": "float division by zero",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mZeroDivisionError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_16248/2055778187.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;36m1\u001b[0m \u001b[0;34m/\u001b[0m \u001b[0;36m10\u001b[0m \u001b[0;34m**\u001b[0m \u001b[0;36m1000\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;31m# 10 ** 1000 / 1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0;36m1\u001b[0m \u001b[0;34m/\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m \u001b[0;34m/\u001b[0m \u001b[0;36m10\u001b[0m \u001b[0;34m**\u001b[0m \u001b[0;36m1000\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mZeroDivisionError\u001b[0m: float division by zero"
+     ]
+    }
+   ],
    "source": [
-    "# YOUR CODE HERE"
+    "# 10 ** 1000\n",
+    "# 1.0 / 10 ** 1000\n",
+    "1 / 10 ** 1000\n",
+    "# 10 ** 1000 / 1 \n",
+    "1 / (1 / 10 ** 1000)"
    ]
   },
   {
@@ -173,7 +253,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "_Your answer here_"
+    "- One can use the Decimal (from decimal import Decimal).\n"
    ]
   },
   {
@@ -187,11 +267,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# YOUR CODE HERE"
+    "isinstance(\"mathias\", int)"
    ]
   },
   {
@@ -205,11 +296,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "otto\n",
+      "mathiasaihtam\n"
+     ]
+    }
+   ],
    "source": [
-    "# YOUR CODE HERE"
+    "def create_palindrome(word):\n",
+    "    if word == word[::-1]:\n",
+    "        return word\n",
+    "    return word + word[::-1][1:]\n",
+    "\n",
+    "print(create_palindrome(\"otto\"))\n",
+    "print(create_palindrome(\"mathias\"))"
    ]
   },
   {
@@ -223,15 +329,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "kjsdflkjLKJALSKdj\n",
+      "KLJASLDkjlkjs\n",
+      "LKAJsdlkjs\n",
+      "Kjsdflkjlkjalskdj Kljasldkjlkjs Lkajsdlkjs\n"
+     ]
+    }
+   ],
    "source": [
-    "name1 = 'HellOIamUsER'\n",
-    "name2 = 'johndeere'\n",
-    "name3 = 'FIRSTNAMELASTNAME'\n",
+    "name1 = input().lower().capitalize()\n",
+    "name2 = input().lower().capitalize()\n",
+    "name3 = input().lower().capitalize()\n",
     "\n",
-    "# YOUR CODE HERE"
+    "print(name1, name2, name3)"
    ]
   },
   {
@@ -263,11 +380,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\"\"\"'''\\/'''\"\"\"\n"
+     ]
+    }
+   ],
    "source": [
-    "# YOUR CODE HERE"
+    "my_var = \"\\\"\\\"\\\"'''\\/'''\\\"\\\"\\\"\"# YOUR CODE HERE\n",
+    "print(my_var)"
    ]
   },
   {
@@ -281,11 +407,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 69,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pi is approximately equal to 3.143\n"
+     ]
+    }
+   ],
    "source": [
-    "# YOUR CODE HERE"
+    "print(f\"pi is approximately equal to {round(22/7, 3)}\")"
    ]
   },
   {
@@ -299,11 +433,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 77,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Hey my name is Mathias', 'And I am 25 years old', 'Living in Barcelona']\n"
+     ]
+    }
+   ],
    "source": [
-    "# YOUR CODE HERE"
+    "text = \"\"\"Hey my name is Mathias\n",
+    "And I am 25 years old\n",
+    "Living in Barcelona\"\"\"\n",
+    "print(text.split(\"\\n\"))"
    ]
   },
   {
@@ -325,9 +470,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 78,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Your variant is 3\n"
+     ]
+    }
+   ],
    "source": [
     "variant = hash(' '.join([first_name, last_name])) % 3 + 1\n",
     "print(f'Your variant is {variant}')"
@@ -336,9 +489,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "_Your answer here_"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -364,11 +515,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 107,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2021-11-11 21:43:51\n"
+     ]
+    }
+   ],
    "source": [
-    "# YOUR CODE HERE"
+    "from assignment01 import get_time, get_date\n",
+    "\n",
+    "print(get_date.ding(), get_time.dong())"
    ]
   },
   {
@@ -438,9 +599,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Py3 Research",
+   "display_name": "Py3_Study",
    "language": "python",
-   "name": "py3_research"
+   "name": "py3_study"
   },
   "language_info": {
    "codemirror_mode": {
@@ -452,7 +613,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
