feat: finished the homework

--- a/home_assignment01.ipynb
+++ b/home_assignment01.ipynb
@@ -114,9 +114,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 110,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'module' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_16248/1507342943.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     20\u001b[0m     \u001b[0mfloat\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     21\u001b[0m     \u001b[0mobject\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 22\u001b[0;31m     \u001b[0mmodule\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     23\u001b[0m     \u001b[0mstr\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     24\u001b[0m     \u001b[0mdict\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'module' is not defined"
+     ]
+    }
+   ],
    "source": [
     "list_of_objects = [\n",
     "    int,\n",
@@ -139,7 +151,7 @@
     "    int,\n",
     "    float,\n",
     "    object,\n",
-    "#     module,\n",
+    "#     module, \n",
     "    str,\n",
     "    dict,\n",
     "    list\n",
@@ -148,36 +160,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<class 'int'> all good\n",
-      "2 all good\n",
-      "2.0 all good\n",
-      "None all good\n",
-      "<class 'object'> all good\n",
-      "<class 'str'> all good\n",
-      "2.0 all good\n",
-      "2.0 all good\n",
-      "hello all good\n",
-      "<module 'this' from '/home/ml32020/mathias_bigler/miniconda3/envs/py3_study/lib/python3.8/this.py'> all good\n",
-      "<class 'dict'> all good\n",
-      "<class 'list'> all good\n",
-      "[<class 'dict'>] all good\n",
-      "{1: []} all good\n"
+      "{\"<class 'dict'>\": [{1: []}, {1: []}],\n",
+      " \"<class 'float'>\": [2.0, 2.0],\n",
+      " \"<class 'int'>\": [2],\n",
+      " \"<class 'list'>\": [[<class 'dict'>]],\n",
+      " \"<class 'object'>\": [<class 'int'>,\n",
+      "                      2,\n",
+      "                      2.0,\n",
+      "                      None,\n",
+      "                      {1: []},\n",
+      "                      <class 'str'>,\n",
+      "                      '2.0',\n",
+      "                      2.0,\n",
+      "                      'hello',\n",
+      "                      <module 'this' from '/home/ml32020/mathias_bigler/miniconda3/envs/py3_study/lib/python3.8/this.py'>,\n",
+      "                      <class 'dict'>,\n",
+      "                      <class 'list'>,\n",
+      "                      [<class 'dict'>],\n",
+      "                      {1: []}],\n",
+      " \"<class 'str'>\": ['2.0', 'hello']}\n"
      ]
     }
    ],
    "source": [
-    "for object in list_of_objects:\n",
-    "    if not isinstance(object, tuple(list_of_types)):\n",
-    "        print(object, \"does not belong to any of the proposed types..\")\n",
-    "    else:\n",
-    "        print(object, \"all good\")"
+    "from pprint import pprint\n",
+    "\n",
+    "result = {}\n",
+    "for typ in list_of_types:\n",
+    "    for obj in list_of_objects:\n",
+    "        if isinstance(obj, typ):\n",
+    "            result.setdefault(str(typ), []).append(obj)\n",
+    "            \n",
+    "pprint(result)\n",
+    "        "
    ]
   },
   {
@@ -191,12 +213,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [],
    "source": [
     "a = 89 / 11\n",
-    "b = 89 & 11"
+    "b = 89 % 11"
    ]
   },
   {
@@ -267,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [
     {
@@ -276,13 +298,20 @@
        "False"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 137,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "isinstance(\"mathias\", int)"
+    "def check_string_is_int(string):\n",
+    "    try:\n",
+    "        int(string)\n",
+    "    except ValueError as ve:\n",
+    "        return False\n",
+    "    return True\n",
+    "\n",
+    "check_string_is_int('123s')\n"
    ]
   },
   {
@@ -329,17 +358,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "kjsdflkjLKJALSKdj\n",
-      "KLJASLDkjlkjs\n",
-      "LKAJsdlkjs\n",
-      "Kjsdflkjlkjalskdj Kljasldkjlkjs Lkajsdlkjs\n"
+      "lasdf\n",
+      "fæerg\n",
+      "qergk\n",
+      "\n",
+      " Lasdf Fæerg Qergk\n"
      ]
     }
    ],
@@ -348,7 +378,7 @@
     "name2 = input().lower().capitalize()\n",
     "name3 = input().lower().capitalize()\n",
     "\n",
-    "print(name1, name2, name3)"
+    "print(\"\\n\", name1, name2, name3)"
    ]
   },
   {
@@ -362,11 +392,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 148,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['dfadk']\n"
+     ]
+    }
+   ],
    "source": [
-    "# YOUR CODE HERE"
+    "def get_all_words_without_punctuations(string):\n",
+    "#     punctuations = [\".\", \",\", \"-\", \"!\", \"?\", \":\", \";\"]\n",
+    "    return [word for word in string.split() if all(c.isalnum() for c in word)]\n",
+    "\n",
+    "print(get_all_words_without_punctuations(\"masdf. dfadk asdfs- sjdfn, asjdf. sdjf?\"))"
    ]
   },
   {
@@ -380,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
@@ -489,7 +531,15 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "- I would have a dictionary for the departments.\n",
+    "- Within the dictionary for the deparments, I would have a list of employees.\n",
+    "- For each employee, I would have a dictionary for their personal data, position, salary.\n",
+    "- For each employee's history of growth, I could use a linked list to handle the chonological order.\n",
+    "- Each employee would have a specific ID which we would use as not only an identifier but also to specify who is whose boss.\n",
+    "- Inside each employee dictionary, I would have a reference variable to the employee's boss.\n",
+    "- Inside each employee dictionary, I would also have a list employee ID's that the employee is boss for. So a bidirectional relationship. "
+   ]
   },
   {
    "cell_type": "markdown",
