--- a/home_assignment01.ipynb
+++ b/home_assignment01.ipynb
@@ -276,7 +276,8 @@
    "metadata": {},
    "source": [
     "- One can use the Decimal (from decimal import Decimal).\n",
-    "\n"
+    "- https://stackoverflow.com/questions/52837474/python-overflowerror-int-too-large-to-convert-to-float\n",
+    "https://www.reddit.com/r/learnpython/comments/mnhopv/how_can_i_fix_an_overflowerror_int_too_large_to/ Decimal type\n"
    ]
   },
   {
@@ -290,29 +291,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "False"
-      ]
-     },
-     "execution_count": 137,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "123\n"
+     ]
     }
    ],
    "source": [
     "def check_string_is_int(string):\n",
     "    try:\n",
     "        int(string)\n",
+    "        return True\n",
     "    except ValueError as ve:\n",
     "        return False\n",
-    "    return True\n",
     "\n",
-    "check_string_is_int('123s')\n"
+    "check_string_is_int('123s')\n",
+    "check_string_is_int('0123')\n",
+    "\n",
+    "print(int(\"0123\"))"
    ]
   },
   {
