--- a/home_assignment01.ipynb
+++ b/home_assignment01.ipynb
@@ -634,7 +634,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "notebook_runs_on_local_machine_without_any_changes = True",
+    "notebook_runs_on_local_machine_without_any_changes = True\n",
     "assert notebook_runs_on_local_machine_without_any_changes"
    ]
   },
