--- a/home_assignment01.ipynb
+++ b/home_assignment01.ipynb
@@ -291,29 +291,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 158,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "123\n"
-     ]
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 158,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "def check_string_is_int(string):\n",
     "    try:\n",
     "        int(string)\n",
+    "        \n",
+    "        if len(string) > 1 and string[0] == '0':\n",
+    "            return False\n",
+    "        \n",
     "        return True\n",
     "    except ValueError as ve:\n",
     "        return False\n",
     "\n",
     "check_string_is_int('123s')\n",
-    "check_string_is_int('0123')\n",
-    "\n",
-    "print(int(\"0123\"))"
+    "check_string_is_int('0123')"
    ]
   },
   {
@@ -537,7 +542,7 @@
     "- I would have a dictionary for the departments.\n",
     "- Within the dictionary for the deparments, I would have a list of employees.\n",
     "- For each employee, I would have a dictionary for their personal data, position, salary.\n",
-    "- For each employee's history of growth, I could use a linked list to handle the chonological order.\n",
+    "- For each employee's history of growth, I could use a linked list to handle the chonological order or just a regular array.\n",
     "- Each employee would have a specific ID which we would use as not only an identifier but also to specify who is whose boss.\n",
     "- Inside each employee dictionary, I would have a reference variable to the employee's boss.\n",
     "- Inside each employee dictionary, I would also have a list employee ID's that the employee is boss for. So a bidirectional relationship. "
