--- a/final/K_neariest_neighbor.ipynb
+++ b/final/K_neariest_neighbor.ipynb
@@ -648,7 +648,7 @@
     "        my_classifier.fit(train_data_x, train_data_y)\n",
     "        prediction = my_classifier.predict(test_data_x)\n",
     "        \n",
-    "        precision, recall, f1, accuracy = binary_classification_metrics(prediction, test_data_y)\n",
+    "        precision, recall, f1, accuracy = multiclass_accuracy(prediction, test_data_y)\n",
     "        \n",
     "        ave_f1 += f1\n",
     "    k_to_accuracy[new_k] = ave_f1 / num_folds\n",
