--- a/final/K_neariest_neighbor.ipynb
+++ b/final/K_neariest_neighbor.ipynb
@@ -445,7 +445,7 @@
     "\n",
     "for i in range(num_folds):\n",
     "    fold_start = i * int(len(binary_train_X) / 5)\n",
-    "    fold_end = (i + 1) * int(len(binary_train_y) / 5)\n",
+    "    fold_end = (i + 1) * int(len(binary_train_X) / 5)\n",
     "    \n",
     "    train_folds_X.append(binary_train_X[fold_start:fold_end])\n",
     "    train_folds_y.append(binary_train_y[fold_start:fold_end])\n",
@@ -614,7 +614,7 @@
     "\n",
     "for i in range(num_folds):\n",
     "    fold_start = i * int(len(train_X) / 5)\n",
-    "    fold_end = (i + 1) * int(len(train_y) / 5)\n",
+    "    fold_end = (i + 1) * int(len(train_X) / 5)\n",
     "    \n",
     "    train_folds_X.append(train_X[fold_start:fold_end])\n",
     "    train_folds_y.append(train_y[fold_start:fold_end])\n",
